feat(app): add global route-based loader with min 300ms delay for smoother navigation UX

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<div *ngIf="loading" class="loader-overlay">
+    <div class="global-spinner"></div>
+</div>
 <router-outlet></router-outlet>
 <app-scrolltopbtn></app-scrolltopbtn>
