--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -302,6 +302,8 @@
 
               <div class="job-location">{{ job.location }}</div>
 
+              <div class="job-createdat">{{ getRelativeDate(job.createdat) }}</div>
+
               <a [routerLink]="['/jobdetails', job.job_id]">
                 <button class="btn-apply w-100 mt-3">APPLY</button>
               </a>
