--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -112,9 +112,11 @@ img {
   .signupContainer {
     padding: 1rem 1rem 3rem;
   }
+  
   .shape-1 {
     left: 67%;
   }
+
   .signupHeader h1 {
     font-size: 3.2rem;
   }
@@ -129,6 +131,10 @@ img {
 }
 
 @media (min-width: 992px) {
+  .signupForm .signupH1 {
+    font-size: 3rem !important;
+    font-weight: 600;
+  }
   .signupContainer {
     padding: 1rem 1rem 5rem;
   }
