--- a/src/app/jobs-list/jobs-list.component.css
+++ b/src/app/jobs-list/jobs-list.component.css
@@ -25,6 +25,129 @@
   opacity: 0.95;
 }
 
+hr {
+  color: #000;
+}
+
+.heroSearch {
+  background-color: #fff;
+  padding: 0.6rem 0;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.customSelectWrapper {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.customSelectWrapper.open .customArrow {
+  transform: translateY(-50%) rotate(-135deg);
+}
+
+.form-label {
+  color: #a2a2a2;
+  font-size: 14px;
+  font-family: "Gordita-Regular", cursive;
+  margin: 0 0 8px 4px;
+  text-align: left;
+  display: block;
+  padding-left: 18px;
+}
+
+.formSelect {
+  appearance: none; /* removes default arrow */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border: none;
+  outline: none !important;
+  padding-right: 40px; /* leave space for custom arrow */
+  color: #585656;
+  font-size: 1rem;
+  font-family: "Gordita-Regular", cursive;
+  text-align: left;
+  display: block;
+  width: 98%;
+  padding-left: 18px;
+  cursor: pointer;
+  user-select: none;
+  background-color: #fff;
+}
+
+.formSelect option {
+  background-color: #fff;
+  color: #00be57;
+  font-size: 1rem;
+  padding: 10px;
+  cursor: pointer;
+}
+
+/* Scrollbar */
+.formSelect::-webkit-scrollbar {
+  width: 10px;
+}
+.formSelect::-webkit-scrollbar-thumb {
+  background-color: #00be57;
+  border-radius: 10px;
+}
+.formSelect::-webkit-scrollbar-track {
+  background-color: #f0f0f0;
+}
+
+.searchBtn {
+  padding: 0.7rem 1.8rem;
+  background-color: #00be57;
+  color: #fff;
+  border: 1px solid transparent;
+  border-radius: 6px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  appearance: button;
+  cursor: pointer;
+  font-family: "Gordita-Regular", cursive;
+  font-weight: 700;
+  text-align: center;
+  transition: 0.3s ease-in-out;
+  margin: -5px auto 0;
+  letter-spacing: 1px;
+}
+.searchBtn:hover {
+  background-color: #244034;
+}
+
+.customArrow {
+  content: "";
+  position: absolute;
+  top: 60%;
+  right: 15px;
+  width: 8px;
+  height: 8px;
+  border-right: 2px solid #7c7c7c;
+  border-bottom: 2px solid #7c7c7c;
+  transform: translateY(-50%) rotate(45deg);
+  transition: transform 0.2s ease-in-out;
+  pointer-events: none;
+}
+
+.customSelectWrapper.open .customArrow {
+  transform: translateY(-50%) rotate(-135deg);
+}
+
+#searchBox {
+  border: none;
+  outline: none;
+  width: 100%;
+  display: block;
+  padding: 20px 0 10px 20px;
+  font-size: 1rem;
+}
+
+#searchBox::placeholder {
+  font-size: 17px;
+  color: #7c7c7c;
+}
+
 .search-form {
   background: white;
   border-radius: 12px;
@@ -47,10 +170,17 @@
 
 .search-input {
   border: none;
+  outline: none;
   padding: 12px 16px;
-  font-size: 0.9rem;
   color: #333;
   width: 100%;
+  font-size: 17px;
+  font-weight: 500;
+  font-family: "Gordita-Regular", cursive;
+}
+
+.search-input .option {
+  cursor: po;
 }
 
 .search-input:focus {
@@ -983,6 +1113,12 @@ html {
 
 /* Tablet Styles (576px and up) */
 @media (min-width: 576px) {
+  .heroSearch {
+    max-width: 100%;
+    width: 100%;
+    padding: 0.6rem 1rem;
+  }
+
   .hero-section {
     padding: 70px 0 50px;
   }
@@ -1081,6 +1217,26 @@ html {
 
 /* Desktop Styles (768px and up) */
 @media (min-width: 768px) {
+  .heroSearch hr {
+    display: none;
+  }
+  .formSelect {
+    padding-right: 5px;
+  }
+  .customArrow {
+    position: absolute;
+    top: 70%;
+    right: 5px;
+  }
+  .heroSearch {
+    max-width: 100%;
+    padding: 0.6rem 1rem 0.8rem;
+  }
+
+  .customSelectWrapper {
+    width: 25%;
+  }
+
   .location-dropdown {
     padding: 10px 14px;
     font-size: 0.9rem;
@@ -1187,6 +1343,10 @@ html {
 
 /* Large Desktop Styles (992px and up) */
 @media (min-width: 992px) {
+  .heroSearch {
+    max-width: 100%;
+    padding: 0.8rem 1rem 0.8rem;
+  }
   .location-dropdown {
     padding: 12px 16px;
     font-size: 0.95rem;
@@ -1450,6 +1610,10 @@ html {
 
 /* Extra Large Desktop Styles (1200px and up) */
 @media (min-width: 1200px) {
+  .heroSearch {
+    max-width: 100%;
+    padding: 1rem;
+  }
   .shape-1 {
     left: 67%;
   }
